// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-text > should convert v-text to setText 1`] = `
"import { child as _child, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> </div>", true)

export function render(_ctx, $props) {
  const n0 = t0()
  const x0 = _child(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(_ctx.str)))
  return n0
}"
`;

exports[`v-text > should raise error and ignore children when v-text is present 1`] = `
"import { child as _child, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> </div>", true)

export function render(_ctx) {
  const n0 = t0()
  const x0 = _child(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(_ctx.test)))
  return n0
}"
`;

exports[`v-text > should raise error if has no expression 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div></div>", true)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;
